# masters-aws-boto3

./: .gitignore  README.md  example.env  manage.py  pyproject.toml
core/: settings.py
core/utils/: client.py  tasks.py
core/utils/dynamodb/: client.py
core/utils/rds/: client.py
core/utils/s3/: client.py  handlers.py
core/utils/vpc/: client.py  handlers.py
tasks1/task1/: main.py
tasks1/task2/: main.py
tasks1/task3/: main.py
tasks10/task1/: handler.py  main.py
tasks10/task2/: handler.py  main.py
tasks11/task1/: handler.py  main.py
tasks11/utils/: bastion.py
tasks2/task1/: main.py
tasks2/task2/: main.py
tasks2/task3/: main.py
tasks2/task4/: handler.py  main.py
tasks2/utils/: s3.py
tasks3/task1/: handler.py  main.py
tasks3/task2/: handler.py  main.py
tasks3/task3/: handler.py  main.py
tasks3/task4/: handler.py  main.py
tasks3/utils/: s3.py
tasks4/task1/: handler.py  main.py
tasks4/task2/: handler.py  main.py
tasks4/task3/: handler.py  main.py
tasks4/utils/: s3.py
tasks5/task1/: handler.py  main.py
tasks5/task2/: handler.py  main.py
tasks5/utils/: s3.py
tasks7/task1/: handler.py  main.py
tasks7/utils/: vpc.py
tasks8/task1/: handler.py  main.py
tasks8/utils/: vpc.py
tasks9/task1/: handler.py  main.py
tasks9/utils/: ec2.py
